commit de cambios

--- a/src/app/busqueda/busqueda.page.html
+++ b/src/app/busqueda/busqueda.page.html
@@ -67,7 +67,7 @@
             <ion-row>
                 <ion-col size="12" size-lg="8" size-md="8" size-sm="10">
                     <div style="float: right;" *ngIf="!MostrarInfo">
-                        <h1>No hay datos por mostrar</h1>
+                        <h1>No hay datos para mostrar</h1>
                     </div>
 
                 </ion-col>
@@ -75,4 +75,5 @@
             </ion-row>
         </ion-grid>
     </div>
+
 </ion-content>
