--- a/src/app/historial-reportes/historial-reportes.page.html
+++ b/src/app/historial-reportes/historial-reportes.page.html
@@ -3,7 +3,7 @@
         <ion-title>Reporte de la unidad</ion-title>
 
         <ion-buttons slot="start">
-            <ion-back-button (click)="dismiss()"></ion-back-button>
+            <!-- <ion-back-button (click)="dismiss()"></ion-back-button> -->
             <ion-back-button defaultHref="/start"></ion-back-button>
 
         </ion-buttons>
@@ -17,38 +17,43 @@
 
     <br>
 
+    <ion-grid fixed>
+        <ion-row>
+            <ion-col size="12" size-lg="12" size-md="12" size-sm="12">
 
-    <ion-card>
-        <ion-card-content>
+                <ion-card>
+                    <ion-card-content>
 
-            <ion-card-subtitle class="centrado" color="danger">Datos de la unidad:</ion-card-subtitle>
-            <br>
+                        <ion-card-subtitle class="centrado" color="danger">DATOS DE LA UNIDAD:</ion-card-subtitle>
+                        <br>
 
-            <ion-card-subtitle class="fuente1">Número de la Unidad:</ion-card-subtitle>
-            <ion-item>
-                <ion-label class="fuente2">{{numUnidad}}</ion-label>
-            </ion-item>
+                        <ion-card-subtitle class="fuente1">Número de la Unidad:</ion-card-subtitle>
+                        <ion-item>
+                            <ion-label class="fuente2">{{numUnidad}}</ion-label>
+                        </ion-item>
 
-            <ion-card-subtitle class="fuente1">Sucursal:</ion-card-subtitle>
-            <ion-item>
-                <ion-label class="fuente2">{{sucursal}}</ion-label>
-            </ion-item>
-            <ion-card-subtitle class="fuente1">Fecha:</ion-card-subtitle>
-            <ion-item>
-                <ion-label class="fuente2">{{fecha}}</ion-label>
-            </ion-item>
-            <ion-card-subtitle class="fuente1">Encargado reporte:</ion-card-subtitle>
-            <ion-item>
-                <ion-label class="fuente2">{{encargado_reporte}}</ion-label>
-            </ion-item>
-            <ion-card-subtitle class="fuente1">Operador:</ion-card-subtitle>
-            <ion-item>
-                <ion-label class="fuente2">{{operador}}</ion-label>
-            </ion-item>
+                        <ion-card-subtitle class="fuente1">Sucursal:</ion-card-subtitle>
+                        <ion-item>
+                            <ion-label class="fuente2">{{sucursal}}</ion-label>
+                        </ion-item>
+                        <ion-card-subtitle class="fuente1">Fecha:</ion-card-subtitle>
+                        <ion-item>
+                            <ion-label class="fuente2">{{fecha | date:'d/M/yyyy, h:mm a'}}</ion-label>
+                        </ion-item>
+                        <ion-card-subtitle class="fuente1">Reporte Generado Por:</ion-card-subtitle>
+                        <ion-item>
+                            <ion-label class="fuente2">{{encargado_reporte}}</ion-label>
+                        </ion-item>
+                        <ion-card-subtitle class="fuente1">Operador:</ion-card-subtitle>
+                        <ion-item>
+                            <ion-label class="fuente2">{{operador}}</ion-label>
+                        </ion-item>
 
-        </ion-card-content>
-    </ion-card>
-
+                    </ion-card-content>
+                </ion-card>
+            </ion-col>
+        </ion-row>
+    </ion-grid>
     <br>
 
     <ion-grid>
@@ -61,7 +66,7 @@
                 Estado
             </ion-col>
             <ion-col class="ba">
-                Comentario
+                Daño
             </ion-col>
             <ion-col class="ba">
                 Fotografia
@@ -82,15 +87,15 @@
             <ion-col class="row">
                 <ion-slides #slides *ngIf="historial.fotografia1 !== ''" pager="true" [options]="slideOpts" pager="true" style="width: 130px;">
                     <ion-slide *ngIf="historial.fotografia1 !== ''">
-                        <ion-img src="http://192.168.9.144:3000/api/imagen/{{historial.fotografia1}}" style="height: 130px;"></ion-img>
+                        <ion-img src="{{url}}imagen/{{historial.fotografia1}}" style="height: 130px;"></ion-img>
 
                     </ion-slide>
                     <ion-slide *ngIf="historial.fotografia2 !== ''">
-                        <ion-img src="http://192.168.9.144:3000/api/imagen/{{historial.fotografia2}}" style="height: 130px;"></ion-img>
+                        <ion-img src="{{url}}imagen/{{historial.fotografia2}}" style="height: 130px;"></ion-img>
 
                     </ion-slide>
                     <ion-slide *ngIf="historial.fotografia3 !== ''">
-                        <ion-img src="http://192.168.9.144:3000/api/imagen/{{historial.fotografia3}}" style="height: 130px;"></ion-img>
+                        <ion-img src="{{url}}imagen/{{historial.fotografia3}}" style="height: 130px;"></ion-img>
 
                     </ion-slide>
                 </ion-slides>
