--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -36,7 +36,7 @@ h2 {
 img {
     margin-top: 10px;
     margin-left: 30px;
-    height: 50px;
+    height: 700px;
 }
 
 #container a {
@@ -46,4 +46,12 @@ img {
 ion-item {
     margin-left: 20px;
     margin-right: 20px;
+}
+
+.trash {
+    color: rgb(241, 35, 35);
+}
+
+.add {
+    color: rgb(26, 23, 23);
 }
