--- a/src/app/historial-reportes/historial-reportes.page.scss
+++ b/src/app/historial-reportes/historial-reportes.page.scss
@@ -31,11 +31,13 @@
     border: 1px solid black;
     text-align: center;
     color: rgb(251, 251, 251);
+    font-size: 20px;
 }
 
 .row {
     border: 1px solid black;
     text-align: left;
+    font-size: 18px;
 }
 
 ion-card {
