--- a/src/app/busqueda/busqueda.page.html
+++ b/src/app/busqueda/busqueda.page.html
@@ -2,7 +2,8 @@
     <ion-toolbar color="danger">
 
         <ion-buttons style="height: 30px;">
-            <ion-back-button defaultHref="/start"></ion-back-button>
+            <!-- <ion-back-button defaultHref="/start"></ion-back-button> -->
+            <!-- <ion-menu-button></ion-menu-button> -->
             <ion-title>Busqueda</ion-title>
             <ion-img style="height: 40px; margin-center: 140px;" src="assets/logoTrucka.png"></ion-img>
         </ion-buttons>
@@ -20,7 +21,7 @@
         </ion-refresher>
 
         <ion-toolbar>
-            <ion-searchbar class="mayusculas" placeholder="Codigo de la unidad" value="{{numero}}" [(ngModel)]="numero" animated="true"></ion-searchbar>
+            <ion-searchbar style="margin-top: 30px;" class="mayusculas" placeholder="Codigo de la unidad" value="{{numero}}" [(ngModel)]="numero" animated="true"></ion-searchbar>
         </ion-toolbar>
         <ion-grid fixed>
             <ion-row>
@@ -57,6 +58,10 @@
             <ion-row>
                 <ion-col style="float: right;">
                     <ion-button style="float: left;" (click)=" BtnCancelar()" color="danger">Cancelar</ion-button>
+                </ion-col>
+                <ion-col>
+                </ion-col>
+                <ion-col>
                 </ion-col>
                 <ion-col style="float: right;">
                     <ion-button style="float: left;" (click)="alertNull()" color="danger">Siguiente</ion-button>
