--- a/src/app/start/start.page.html
+++ b/src/app/start/start.page.html
@@ -1,16 +1,22 @@
 <ion-header>
     <ion-toolbar color="danger">
 
+        <ion-buttons slot="start">
+
+            <ion-menu-button (click)="openFirst()"></ion-menu-button>
+        </ion-buttons>
         <ion-buttons style="height: 30px;">
 
             <ion-title>Inicio Reportes</ion-title>
 
-            <ion-img style="height: 40px; margin-left: 140px;" src="assets/logoTrucka.png"></ion-img>
+
+            <ion-img style="height: 40px; margin-center: 130px;" src="assets/logoTrucka.png"></ion-img>
         </ion-buttons>
     </ion-toolbar>
 </ion-header>
 
 <ion-content>
+
     <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
         <ion-refresher-content pullingIcon="chevron-down-circle-outline" pullingText="Pull to refresh" refreshingSpinner="circles" refreshingText="Actualizando...">
         </ion-refresher-content>
@@ -22,10 +28,7 @@
             <ion-col style="float: right;" size="12" size-lg="10" size-md="12" size-sm="12">
                 <ion-searchbar [(ngModel)]="busqueda" placeholder="inserta codigo de unidad"></ion-searchbar>
                 <br>
-
-
-
-                <ion-button style="float: right;" color="danger" routerLink="/busqueda">Nuevo Reporte</ion-button>
+                <!-- <ion-button style="float: right;" color="danger" routerLink="/busqueda">Nuevo Reporte</ion-button> -->
             </ion-col>
         </ion-row>
         <ion-row><br></ion-row>
@@ -52,7 +55,7 @@
 
 
                         <ion-card-subtitle style=" margin-top: 10px; font-weight: bold; font-size: 14px;">{{reporte.operador}}</ion-card-subtitle>
-                        <ion-card-subtitle style=" margin-top: 10px; font-weight: bold; font-size: 14px;">{{reporte.fecha | date:'d/M/yyyy, h:mm a'}}</ion-card-subtitle>
+                        <ion-card-subtitle style=" margin-top: 10px; font-weight: bold; font-size: 14px;">{{reporte.fecha }}</ion-card-subtitle>
 
                     </ion-card-content>
 
@@ -60,4 +63,5 @@
             </ion-col>
         </ion-row>
     </ion-grid>
+
 </ion-content>
