--- a/src/app/agregar-art/agregar-art.page.scss
+++ b/src/app/agregar-art/agregar-art.page.scss
@@ -34,3 +34,13 @@ ion-card {
     text-align: left;
     font-size: 18px;
 }
+
+.trash {
+    color: rgb(241, 35, 35);
+    text-align: right;
+}
+
+.add {
+    color: rgb(26, 23, 23);
+    text-align: right;
+}
