--- a/src/app/busqueda/busqueda.page.html
+++ b/src/app/busqueda/busqueda.page.html
@@ -1,9 +1,14 @@
 <ion-header>
-    <ion-toolbar color="danger">
 
+    <ion-toolbar color="danger">
+        <!-- <div *ngIf="Grupo == '' "> -->
+        <!-- <ion-buttons slot="start">
+
+                <ion-menu-button></ion-menu-button>
+            </ion-buttons> -->
+        <!-- </div> -->
         <ion-buttons style="height: 30px;">
-            <!-- <ion-back-button defaultHref="/start"></ion-back-button> -->
-            <!-- <ion-menu-button></ion-menu-button> -->
+
             <ion-title>Busqueda</ion-title>
             <ion-img style="height: 40px; margin-center: 140px;" src="assets/logoTrucka.png"></ion-img>
         </ion-buttons>
