--- a/src/app/historial-reportes/historial-reportes.page.html
+++ b/src/app/historial-reportes/historial-reportes.page.html
@@ -1,31 +1,12 @@
-<!-- <ion-header no-border>
+<ion-header no-border>
     <ion-toolbar color="danger">
-        <ion-title>Reporte de la unidad</ion-title>
-        <ion-menu-button></ion-menu-button> -->
-<!-- <ion-buttons slot="start"> -->
-<!-- <ion-back-button (click)="dismiss()"></ion-back-button> -->
-<!-- <ion-back-button defaultHref="/start"></ion-back-button> -->
-
-<!-- </ion-buttons> -->
-<!-- 
-    </ion-toolbar>
-</ion-header> -->
-<ion-header>
-    <ion-toolbar color="danger">
-
-        <ion-buttons style="height: 30px;">
-            <ion-menu-button></ion-menu-button>
-            <!-- <ion-back-button defaultHref="/start"></ion-back-button> -->
-
+        <ion-buttons>
+            <ion-back-button defaultHref="/start"></ion-back-button>
             <ion-title>Reporte de la unidad</ion-title>
             <ion-img style="height: 40px; margin-center: 140px;" src="assets/logoTrucka.png"></ion-img>
         </ion-buttons>
-
     </ion-toolbar>
-
 </ion-header>
-
-
 
 <ion-content>
 
@@ -120,10 +101,7 @@
 
                     </ion-slide>
                 </ion-slides>
-
-
             </ion-col>
-
         </ion-row>
 
 
