--- a/src/app/inicio-administracion/inicio-administracion.page.html
+++ b/src/app/inicio-administracion/inicio-administracion.page.html
@@ -40,7 +40,7 @@
                                 <ion-card-title style=" margin-top: 20px;"> Consultar Historial de reportes de una unidad</ion-card-title>
                             </ion-col>
                             <ion-col>
-                                <img src="assets/Bocina.png">
+                                <img src="assets/logoTrucka.png">
                             </ion-col>
 
                         </ion-row>
@@ -55,7 +55,7 @@
                                 <ion-card-title style=" margin-top: 20px;">Administracion de Piezas</ion-card-title>
                             </ion-col>
                             <ion-col>
-                                <img src="assets/Bocina.png">
+                                <img src="assets/logoTrucka.png">
                             </ion-col>
 
                         </ion-row>
@@ -70,7 +70,7 @@
                                 <ion-card-title style=" margin-top: 20px;">Consultar total de reportes</ion-card-title>
                             </ion-col>
                             <ion-col>
-                                <img src="assets/Bocina.png">
+                                <img src="assets/logoTrucka.png">
                             </ion-col>
 
                         </ion-row>
@@ -85,7 +85,7 @@
                                 <ion-card-title style=" margin-top: 20px;">Tipos de estado</ion-card-title>
                             </ion-col>
                             <ion-col>
-                                <img src="assets/Bocina.png">
+                                <img src="assets/logoTrucka.png">
                             </ion-col>
 
                         </ion-row>
@@ -100,7 +100,7 @@
                                 <ion-card-title style=" margin-top: 20px;"> Nueva Inspección</ion-card-title>
                             </ion-col>
                             <ion-col>
-                                <img src="assets/Bocina.png">
+                                <img src="assets/logoTrucka.png">
                             </ion-col>
 
                         </ion-row>
