--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,32 +8,32 @@
         </ion-header>
         <ion-content>
             <ion-list>
-                <ion-item routerLink="/inicio-administracion">
+                <ion-item routerLink="/inicio-administracion" (click)=" openEnd()">
                     <ion-icon slot="start" name="home-sharp"></ion-icon>
                     <ion-label class="fuente">Inicio</ion-label>
                 </ion-item>
-                <ion-item routerLink="/busqueda">
+                <ion-item routerLink="/busqueda" (click)=" openEnd()">
                     <ion-icon slot="start" name="create-sharp"></ion-icon>
                     <ion-label class="fuente">Generar Nuevo Reporte</ion-label>
                 </ion-item>
-                <ion-item routerLink="/historial-tractos">
+                <ion-item routerLink="/historial-tractos" (click)=" openEnd()">
                     <ion-icon slot="start" name="calendar-sharp"></ion-icon>
                     <ion-label class="fuente">Historial de reportes de una unidad</ion-label>
                 </ion-item>
 
-                <ion-item routerLink="/start">
+                <ion-item routerLink="/start" (click)=" openEnd()">
                     <ion-icon slot="start" name="folder-open-sharp"></ion-icon>
                     <ion-label class="fuente">Consultar total de Reportes</ion-label>
                 </ion-item>
-                <ion-item routerLink="/tipoestado">
+                <ion-item routerLink="/tipoestado" (click)=" openEnd()">
                     <ion-icon slot="start" name="build-sharp"></ion-icon>
                     <ion-label class="fuente">Nuevo Tipo de estado</ion-label>
                 </ion-item>
-                <ion-item routerLink="/administracion">
+                <ion-item routerLink="/administracion" (click)=" openEnd()">
                     <ion-icon slot="start" name="body"></ion-icon>
                     <ion-label class="fuente">Administración de piezas</ion-label>
                 </ion-item>
-                <ion-item routerLink="/nuevainspeccion">
+                <ion-item routerLink="/nuevainspeccion" (click)=" openEnd()">
                     <ion-icon slot="start" name="bulb-sharp"></ion-icon>
                     <ion-label class="fuente">Nueva Inspeccion</ion-label>
                 </ion-item>
