--- a/src/app/nuevainspeccion/nuevainspeccion.page.scss
+++ b/src/app/nuevainspeccion/nuevainspeccion.page.scss
@@ -30,3 +30,17 @@ ion-card {
     color: rgb(26, 23, 23);
     text-align: right;
 }
+
+.row {
+    border: 1px solid black;
+    text-align: left;
+    font-size: 18px;
+}
+
+.ba {
+    background-color: rgba(241, 82, 82);
+    border: 1px solid black;
+    text-align: center;
+    color: rgb(251, 251, 251);
+    font-size: 20px;
+}
