--- a/src/app/nuevo-reporte/nuevo-reporte.page.scss
+++ b/src/app/nuevo-reporte/nuevo-reporte.page.scss
@@ -55,3 +55,8 @@ ion-item {
     color: rgb(226, 4, 4);
     text-transform: uppercase;
 }
+
+.h3 {
+    font-weight: bold;
+    text-transform: uppercase;
+}
